<resources>
    <string name="app_name">Mis Clientes</string>
    <string name="inicio_bienvenido">¡Bienvenido!</string>
    <string name="inicio_NuevoProspecto">Capturar nuevo prospecto</string>
    <string name="inicio_VerTramite">Ver lista de tramites</string>
    <string name="inicio_Reporte">Generar reporte</string>
    <string name="inicio_Vehiculo">Administrar vehiculos</string>
    <string name="vehiculo_modelo">Modelo del vehiculo</string>
    <string name="vehiculo_año">Año del vehiculo</string>
    <string name="nuevo_vehiculo">Nuevo vehiculo</string>
    <string name="alerta_vehiculos">No hay vehiculos registrados</string>
    <string name="eliminar_vehiculo">Eliminar vehiculo</string>
    <string name="etiqueta_imagen">Selecciona imagen</string>
    <string name="etiqueta_modelo">Escriba el modelo del vehiculo</string>
    <string name="etiqueta_version">Escriba la version del vehiculo</string>
    <string name="etiqueta_transmision">Transmision: </string>
    <string name="etiqueta_año">Escriba el año del modelo del vehiculo</string>
    <string name="etiqueta_estado">Estado: </string>
    <string name="etiqueta_cliente">Introduzca la informacion del cliente</string>
    <string name="etiqueta_nombre_cliente">Nombre</string>
    <string name="etiqueta_apellido_paterno_cliente">Apellido paterno</string>
    <string name="etiqueta_apellido_materno_cliente">Apellido materno</string>
    <string name="etiqueta_celular_cliente">Numero de celular</string>
    <string name="etiqueta_actividad_laboral">Escriba la actividad laboral del cliente </string>
    <string name="etiqueta_historial_crediticio">Historial Crediticio: </string>
    <string name="etiqueta_comprobante_ingresos">Describa el comprobante de ingresos empleado</string>
    <string name="etiqueta_enganche">Introduzca la cantidad del enganche</string>
    <string name="etiqueta_fecha_contacto">Establecer fecha de contacto</string>
    <string name="etiqueta_siguiente">Siguiente</string>
    <string name="etiqueta_tramite">Introduzca la informacion del tramite</string>
    <string name="etiqueta_actividad">Actividad (Uso del vehiculo): </string>
    <string name="etiqueta_perfil">Escriba el perfil del vehiculo deseado por el cliente</string>
    <string name="etiqueta_etapa">Etapa actual del tramite: </string>
    <string name="etiqueta_financiamiento">Tipo de financiamiento: </string>
    <string name="etiqueta_vehiculo_tramite">Vehiculo relacionado al tramite: </string>
    <string name="etiqueta_notas">Administrar notas</string>
    <string name="etiqueta_citas">Administrar citas</string>
    <string name="etiqueta_finalizar">Listo!</string>
    <string name="editar_info_cliente">Editar informacion del cliente</string>
    <string name="etiqueta_terminar_edicion">Terminar edicion</string>
    <string name="etiqueta_volver">Atras</string>
    <string name="editar_info_tramite">Editar informacion del tramite</string>
    <string name="fecha_contacto">Fecha de contacto: </string>
    <string name="no_tramites">No se encontraron tramites. Crea uno en la pantalla principal por medio del boton de Capturar nuevo prospecto</string>
    <string name="lista_tramites_nombre">Nombre prospecto</string>
    <string name="lista_tramites_fecha_contacto">Fecha de contacto</string>
    <string name="lista_tramites_etapa">Etapa</string>
    <string name="eliminar_tramite">Eliminar Tramite</string>
    <string name="titulo_nota">Titulo de la nota</string>
    <string name="cuerpo_nota">Describa los detalles de la nota aqui</string>
    <string name="no_notas">No hay notas para este tramite</string>
    <string name="eliminar_notas">Eliminar nota</string>
    <string name="no_citas">No hay citas para este tramite</string>
    <string name="eliminar_citas">Eliminar cita</string>
    <string name="titulo_cita">Titulo de la cita</string>
    <string name="fecha_cita">Fecha de la cita: </string>
    <string name="hora_cita">Hora de la cita: </string>
    <string name="generar_reporte">Seleccione el tramite correspondiente al reporte a generar</string>
    <string name="reporte_del_tramite">Reporte del tramite</string>
    <string name="cliente">Cliente:</string>
    <string name="contacto_del_cliente">Contacto del cliente:</string>
    <string name="actividad_laboral_del_cliente">Actividad laboral del cliente:</string>
    <string name="fecha_de_contacto_con_el_cliente">Fecha de contacto con el cliente:</string>
    <string name="estado_de_historial_crediticio">Estado de historial crediticio:</string>
    <string name="comprobante_de_ingresos_empleado">Comprobante de ingresos empleado:</string>
    <string name="cantidad_de_enganche">Cantidad de enganche:</string>
    <string name="perfil_del_vehiculo_de_interes">Perfil del vehiculo de interes:</string>
    <string name="etapa_actual_del_tramite">Etapa actual del tramite:</string>
    <string name="tipo_de_financiamiento_empleado">Tipo de financiamiento empleado:</string>
    <string name="informacion_del_vehiculo_seleccionado_para_el_tramite">Informacion del vehiculo seleccionado para el tramite:</string>
    <string name="modelo">Modelo:</string>
    <string name="version_del_vehiculo">Version del vehiculo:</string>
    <string name="tipo_de_transmision">Tipo de transmision:</string>
    <string name="estado_del_vehiculo">Estado del vehiculo:</string>
    <string name="actividad_para_el_uso_del_vehiculo">Actividad para el uso del vehiculo:</string>
</resources>