<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagen_vehiculo"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="15dp"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"
        android:scaleType="centerInside" />

    <Button
        android:id="@+id/boton_imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/etiqueta_imagen"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ET_modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/etiqueta_modelo"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ET_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/etiqueta_version"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_transmision"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_transmision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <TextView
        android:id="@+id/TV_Transmision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_estado"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <TextView
        android:id="@+id/TV_Estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/ET_año"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/etiqueta_año"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

</LinearLayout>
