<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/boton_volver_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/abc_vector_test"
        />

    <EditText
        android:id="@+id/titulo_cita_xd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:hint="@string/titulo_cita" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/imagenfinal2"/>

    <Button
        android:id="@+id/boton_fecha_cita"
        android:text="@string/fecha_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/imagenfinal1"/>

    <Button
        android:id="@+id/boton_hora_cita"
        android:text="@string/hora_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>