<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/fecha_chida"
            android:layout_width="90dp"
            android:layout_height="90dp"/>

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_titulo_cita"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/titulo_cita"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_fecha_cita"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/fecha_cita"
                android:textColor="@android:color/background_dark"
                android:gravity="center_vertical"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_hora_cita"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/hora_cita"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>